# ya-mpp-movies

./: .gitignore  Makefile  README.md  as_is.md  dc-debug.yml  docker-compose.yml  flake8.cfg  logstash.conf  mypy.ini  pyproject.toml  to_be.md
authapi/: api.env  dc-debug.yml  docker-compose.yml  pyproject.toml  requirements.txt
authapi/src/: alembic.ini  auth.py  decorators.py  main.py  superuser.py
authapi/src/api/v1/: history.py  jwt.py  oauth.py  roles.py  users.py
authapi/src/core/: config.py  oauth.py
authapi/src/db/: postgres.py
authapi/src/migrations/: env.py
authapi/src/migrations/versions/: 00d91c2157bd_add_social.py  a065ac44aa56_initial_migration.py
authapi/src/models/: history.py  jwt.py  role.py  social.py  user.py
authapi/src/services/: db_service.py  history.py  jwt.py  roles.py  social.py  users.py
authapi/src/tracer/: tracer.py
authapi/user-group-db/init_pg/: auth_db.sql
django/: entrypoint.sh  (+1 more)
notifications/: dc-debug.yml  docker-compose.yml  pyproject.toml
notifications/api/: entrypoint.sh  requirements.txt
notifications/api/src/: Dockerfile-DB  alembic.ini  entrypoint.sh  main.py  requirements.txt
notifications/api/src/alembic/: env.py
notifications/api/src/alembic/versions/: 6b3af28ea24a_nitial_tables.py  7c827a168aec_add_text.py
notifications/api/src/api/v1/: events.py  template.py
notifications/api/src/core/: config.py  logger.py
notifications/api/src/db/: postgres.py
notifications/api/src/models/: events.py  notifications.py
notifications/api/src/services/: db_service.py  mq_service.py  template.py
notifications/db/init_pg/: all_base.sql
notifications/dja_admin/: Dockerfile  entrypoint.sh  requirements.txt
notifications/dja_admin/celery_cron/: admin.py  apps.py  celery.py  email_sender.py  get_user.py  models.py  tasks.py
notifications/dja_admin/celery_cron/migrations/: 0001_initial.py
notifications/dja_admin/config/: urls.py
notifications/dja_admin/config/settings/: base.py  dev.py
notifications/dja_admin/config/settings/components/: celery.py  database.py
notifications/simple_worker/: Dockerfile  requirements.txt
notifications/simple_worker/src/: config.py  db.py  get_user.py  main.py  on_message.py
notifications/simple_worker/src/models/: notifications.py
notifications/tests/: main.py  task_args.json  test.py
ugc/: .env.example  Dockerfile  Makefile  dc-debug.yml  docker-compose.yml  pyproject.toml  requirements.txt
ugc/db/: mongo.py  sharded_cluster_setup.js
ugc/etl/: Dockerfile  main.py  requirements.txt
ugc/src/: db.py  main.py
ugc/src/api/v1/: bookmarks.py  events.py  likes.py  reviews.py
ugc/src/core/: config.py
ugc/src/models/: bookmarks.py  likes.py  models.py  reviews.py
ugc/src/services/: bookmark_service.py  kafka_service.py  likes_service.py  reviews_service.py
ugc/src/tests/functional/: conftest.py  helper.py
(+60 files in other folders)
