[tool.poetry]
name = "authapi"
version = "0.1.0"
description = "Authorization service"
authors = ["Vasiliy Ivanov <shitcoder@pm.me>\", \"Vera Kaynara <vera.blinova.1996@gmail.com>\", \"Sergey Kiselev <vvh1te@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.13.1"
sqlmodel = "^0.0.14"
sqlalchemy = "^2.0.25"
uvicorn = "^0.26.0"
pydantic = "^2.5.2"
pydantic-core = "^2.14.5"
pydantic-settings = "^2.1.0"
fastapi = ">=0.100.1,<0.101.0"
orjson = "^3.9.10"
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
gunicorn = "^21.2.0"
httpx = "^0.26.0"
aiohttp = "^3.9.1"
werkzeug = "^3.0.1"
asyncpg = "^0.29.0"
async-fastapi-jwt-auth = "^0.6.2"
redis = "^5.0.1"
opentelemetry-api = "^1.22.0"
opentelemetry-sdk = "^1.22.0"
opentelemetry-semantic-conventions = "^0.43b0"
opentelemetry-instrumentation-fastapi = "^0.43b0"
fastapi-oauth2 = "^1.0.0b3"
opentelemetry-exporter-jaeger-thrift = "^1.21.0"
fastapi-limiter = "^0.1.6"
pyyaml = "^6.0.1"
ua-parser = "^0.18.0"
user-agents = "^2.2.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.18.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
