[tool.poetry]
name = "notifications"
version = "0.1.0"
description = "Notification Service"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.13.1"
sqlalchemy = "^2.0.30"
asyncio = "^3.4.3"
sqlmodel = "^0.0.18"
uvicorn = "^0.29.0"
gunicorn = "^22.0.0"
asyncpg = "^0.29.0"
fastapi = "^0.111.0"
celery = "^5.4.0"
flower = "^2.0.1"
django = "^5.0.6"
python-dotenv = "^1.0.1"
django-split-settings = "^1.3.1"
django-debug-toolbar = "^4.3.0"
django-postgres-extra = "^2.0.8"
psycopg2-binary = "^2.9.9"
django-celery-beat = "^2.6.0"
django-celery-results = "^2.5.1"
pydantic = "^2.7.1"
pydantic-core = "^2.18.2"
pydantic-settings = "^2.2.1"
requests = "^2.31.0"
aio-pika = "^9.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
